--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "zd-svg-icons": "git+ssh://git@github.com/zendeskgarden/svg-icons.git"
   },
   "devDependencies": {
-    "autoprefixer-loader": "~0.1.1",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.20.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "~6.2.9",
@@ -66,10 +66,10 @@
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax#v2.0.0.rc2",
     "jasmine-spec-reporter": "^2.4.0",
     "jsdom": "~7.2.2",
-    "json-loader": "~0.5.1",
     "jsonwebtoken": "^5.7.0",
     "mockery": "~1.4.0",
     "node-sass": "^3.4.2",
+    "postcss-loader": "^1.3.3",
     "raw-loader": "~0.5.1",
     "react-addons-test-utils": "^15.4.1",
     "react-shallow-testutils": "^2.0.0",
@@ -86,9 +86,9 @@
     "tiny-lr": "0.0.7",
     "uglify-js": "^2.6.1",
     "url-loader": "~0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^2.4.1",
     "webpack-dashboard": "^0.2.1",
-    "webpack-dev-server": "^1.16.2",
+    "webpack-dev-server": "^2.4.2",
     "webpack-visualizer-plugin": "^0.1.5",
     "when": "~3.4.4"
   }
