--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "color": "~0.7.3",
     "counterpart": "~0.16.0",
     "lodash": "~4.0.0",
+    "prop-types": "^15.5.8",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.5",
