--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "counterpart": "~0.16.0",
     "lodash": "~4.0.0",
     "prop-types": "^15.5.8",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "~15.4.1",
+    "react-dom": "~15.4.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
