Add mock for scrollContainer, make noopReactComponent cover more components, add more tests for chat component

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -13,6 +13,7 @@
     "mockery": true,
     "noop": true,
     "noopReactComponent": true,
+    "scrollContainerComponent": true,
     "pluckSubscribeCall": true,
     "React": true,
     "TestUtils": true,
