--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["react", "es2015", "stage-0"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "ie >= 10"]
+      },
+      debug: true
+    }],
+    "react",
+    "stage-2"
+  ]
 }
