--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "babel-core": "^6.20.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "~6.2.9",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^1.1.3",
     "classnames": "^2.2.1",
     "concurrently": "^3.1.0",
