--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions", "ie >= 10"]
-      },
-      debug: true
-    }],
-    "react",
-    "stage-2"
-  ]
+  "presets": ["es2015", "react", "stage-2"]
 }
