--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
+    "redux-on-state-change": "^1.0.0",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "~1.11.4",
     "superagent": "^2.0.0",
