wrote s3 release task for s3; split up webpack builds;

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "prewatch": "npm run build:version:generate && npm run build-examples",
     "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map",
     "prebuild:ac": "cp manifest.json dist",
-    "build:prod": "webpack -p --config=./webpack.prod.config.js",
-    "build:ac": "webpack -p --config=./webpack.ac.config.js",
+    "build:prod": "webpack --config=./webpack.prod.config.js",
+    "build:ac": "webpack --config=./webpack.ac.config.js",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack.dev.config.js",
-    "build": "npm run build-setup:prod && concurrently \"npm run build:prod\" \"npm run build:ac\"",
+    "build": "npm run build-setup:prod && npm run build:prod",
+    "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
     "test:debug": "node debug script/jasmine-runner.js",
     "lint": "eslint src test",
