--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-core": "^6.20.0",
+    "babel-core": "6.20.0",
     "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "~6.2.9",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-loader": "6.2.9",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-2": "6.24.1",
     "chalk": "^1.1.3",
     "classnames": "^2.2.1",
     "concurrently": "^3.1.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "0.23.1",
     "cssstyle": "0.2.30",
     "enzyme": "^2.7.1",
     "es5-shim": "~3.4.0",
@@ -86,9 +86,9 @@
     "svgo": "~0.5.3",
     "svgo-loader": "~1.1.0",
     "tiny-lr": "0.0.7",
-    "uglify-js": "^2.6.1",
-    "url-loader": "~0.5.7",
-    "webpack": "^2.4.1",
+    "uglify-js": "2.6.1",
+    "url-loader": "0.5.7",
+    "webpack": "2.6.1",
     "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-visualizer-plugin": "^0.1.5",
