Show progress on long running webpack command.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prewatch": "npm run build:version:generate && npm run build-examples",
     "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map",
     "prebuild:ac": "cp manifest.json dist",
-    "build:prod": "webpack --config=./webpack.prod.config.js",
-    "build:ac": "webpack --config=./webpack.ac.config.js",
+    "build:prod": "webpack --config=./webpack.prod.config.js --progress",
+    "build:ac": "webpack --config=./webpack.ac.config.js --progress",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
