--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "sass-loader": "~3.1.2",
     "selenium-server": "~2.43.1",
     "semver": "^5.3.0",
+    "source-map-loader": "^0.2.1",
     "svgo": "~0.5.3",
     "svgo-loader": "~1.1.0",
     "tiny-lr": "0.0.7",
