--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "airwaves": "~0.3.0",
     "chat-web-sdk": "git+ssh://git@github.com/zendesk/chat-web-sdk.git#1.1.4",
     "color": "~0.7.3",
-    "counterpart": "~0.16.0",
     "lodash": "~4.0.0",
     "prop-types": "^15.5.8",
     "react": "~15.4.1",
@@ -39,6 +38,7 @@
     "redux-thunk": "^2.1.0",
     "sanitize-html": "~1.11.4",
     "sha1": "^1.1.1",
+    "sprintf-js": "^1.1.1",
     "superagent": "^2.0.0",
     "zd-css-buttons": "git+ssh://git@github.com/zendeskgarden/css-buttons.git#2.2.0",
     "zd-css-variables": "git+ssh://git@github.com/zendeskgarden/css-variables.git#0.11.0",
