using custom sha1 module to remove crypto; added new visualiser for prod builds

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-on-state-change": "^1.0.0",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "~1.11.4",
+    "sha1": "^1.1.1",
     "superagent": "^2.0.0",
     "zd-css-buttons": "git+ssh://git@github.com/zendeskgarden/css-buttons.git#2.2.0",
     "zd-css-variables": "git+ssh://git@github.com/zendeskgarden/css-variables.git#0.11.0",
