--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "uglify-js": "^2.6.1",
     "url-loader": "~0.5.7",
     "webpack": "^2.4.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-visualizer-plugin": "^0.1.5",
