--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-logger": "^2.6.1",
     "redux-on-state-change": "^1.0.0",
     "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.1",
     "sanitize-html": "~1.11.4",
     "sha1": "^1.1.1",
     "sprintf-js": "^1.1.1",
