--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build-examples": "node script/build-examples.js",
     "prewatch": "npm run build:version:generate && npm run build-examples",
     "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map",
-    "prebuild:ac": "cp manifest.json dist",
-    "build:prod": "webpack --config=./webpack.prod.config.js --progress",
-    "build:ac": "webpack --config=./webpack.ac.config.js --progress",
-    "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack.dev.config.js",
-    "watch:ac": "./script/start-ac-dev && webpack-dashboard -- webpack-dev-server --config=./webpack.ac.dev.config.js",
+    "prebuild:ac": "cp manifest.json src/translation/*.js dist",
+    "build:prod": "webpack --config=./webpack/webpack.prod.config.js --progress",
+    "build:ac": "webpack --config=./webpack/webpack.ac.config.js --progress",
+    "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
+    "watch:ac": "./script/start-ac-dev && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
