added translation files to ac deploy files

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build-examples": "node script/build-examples.js",
     "prewatch": "npm run build:version:generate && npm run build-examples",
     "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map",
-    "prebuild:ac": "cp manifest.json src/translation/*.js dist",
+    "build:ze_translations": "uglifyjs -c -m -o dist/ze_translations.js -- src/translation/ze_translations.js",
+    "build:ze_localeIdMap": "uglifyjs -c -m -o dist/ze_localeIdMap.js -- src/translation/ze_localeIdMap.js",
+    "prebuild:ac": "cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap",
     "build:prod": "webpack --config=./webpack/webpack.prod.config.js --progress",
     "build:ac": "webpack --config=./webpack/webpack.ac.config.js --progress",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
