--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
     "test:debug": "node debug script/jasmine-runner.js",
-    "lint": "eslint src test",
+    "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "validate-manifest": "node script/validate_manifest.js"
   },
   "author": "Zendesk",
