--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -27,6 +27,7 @@
   },
   "rules": {
     "max-len": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "jasmine/no-focused-tests": 2
   }
 }
