--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:prod": "script/fetch_i18n && webpack --config=./webpack/webpack.prod.config.js --progress",
     "build:ac": "webpack --config=./webpack/webpack.ac.config.js --progress",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
-    "watch:ac": "./script/start-ac-dev && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
+    "watch:ac": "./script/start-ac-dev && npm run prewatch && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
