--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,11 @@
       "name": "superagent",
       "version": "2.0.0",
       "url": "https://cdnjs.cloudflare.com/ajax/libs/superagent/2.0.0/superagent.min.js"
+    },
+    {
+      "name": "chat-web-sdk",
+      "version": "1.1.4",
+      "url": "https://dev.zopim.com/web-sdk/1.1.4/web-sdk.js"
     }
   ],
   "internal": {
