--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -7,6 +7,7 @@
     "basePath": true,
     "buildTestPath": true,
     "buildSrcPath": true,
+    "connectedComponent": true,
     "domRender": true,
     "initMockRegistry": true,
     "jsdom": true,
