--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,16 @@
       "name": "chat-web-sdk",
       "version": "1.1.4",
       "url": "https://dev.zopim.com/web-sdk/1.1.4/web-sdk.js"
+    },
+    {
+      "name": "socket.io-client",
+      "version": "2.0.4",
+      "url": "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.slim.js"
+    },
+    {
+      "name": "libphonenumber-js",
+      "version": "0.2.2",
+      "url": "https://cdnjs.cloudflare.com/ajax/libs/libphonenumber-js/0.4.42/libphonenumber-js.min.js"
     }
   ],
   "internal": {
