--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "engagement_framework",
   "version": "0.1.0",
   "description": "3rd party embeddable framework and API",
+  "config": {
+    "watchConfigPath": "/config/.watch.example"
+  },
   "scripts": {
     "build:version:generate": "git rev-parse --short HEAD > ./dist/VERSION_HASH",
     "build:version:clean": "rm -rf ./dist/VERSION_HASH",
     "prebuild-examples": "uglifyjs --compress --mangle -- ./src/bootstrap.js > ./dist/bootstrap.js",
-    "build-examples": "node script/build-examples.js",
+    "build-examples": "node script/build-examples.js -- $npm_package_config_watchConfigPath",
     "prewatch": "npm run build:version:generate && npm run build-examples",
     "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map",
     "build:ze_translations": "uglifyjs -c -m -o dist/ze_translations.js -- src/translation/ze_translations.js",
@@ -14,6 +17,8 @@
     "prebuild:ac": "script/ac_fetch_i18n && cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap",
     "build:prod": "script/fetch_i18n && webpack --config=./webpack/webpack.prod.config.js --progress",
     "build:ac": "webpack --config=./webpack/webpack.ac.config.js --progress",
+    "watchConf": "node script/update_watch_config",
+    "postwatchConf": "npm run watch",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
     "watch:ac": "./script/start-ac-dev && npm run prewatch && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
@@ -52,6 +57,7 @@
     "zd-svg-icons": "git+ssh://git@github.com/zendeskgarden/svg-icons.git#1.4.0"
   },
   "devDependencies": {
+    "app-root-path": "^2.0.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.20.0",
     "babel-eslint": "^5.0.0-beta6",
@@ -64,6 +70,7 @@
     "concurrently": "^3.1.0",
     "css-loader": "^0.23.1",
     "cssstyle": "0.2.30",
+    "dotenv": "^4.0.0",
     "enzyme": "^2.7.1",
     "es5-shim": "~3.4.0",
     "eslint": "^1.10.3",
@@ -80,6 +87,7 @@
     "jsdom": "~7.2.2",
     "jsonwebtoken": "^5.7.0",
     "mockery": "~1.4.0",
+    "node-cmd": "^3.0.0",
     "node-sass": "^3.4.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "~0.5.1",
