--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "libphonenumber-js": "~0.2.2",
     "lodash": "~4.0.0",
     "prop-types": "^15.5.8",
-    "react": "~15.4.1",
-    "react-dom": "~15.4.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
@@ -72,7 +72,6 @@
     "css-loader": "^0.23.1",
     "cssstyle": "0.2.30",
     "dotenv": "^4.0.0",
-    "enzyme": "^2.7.1",
     "es5-shim": "~3.4.0",
     "eslint": "^1.10.3",
     "eslint-plugin-jasmine": "^2.8.4",
@@ -92,8 +91,8 @@
     "node-sass": "^3.4.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "~0.5.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-shallow-testutils": "^2.0.0",
+    "react-shallow-testutils": "~3.0.1",
+    "react-test-renderer": "^16.0.0",
     "react-transform-catch-errors": "^1.0.1",
     "redux-mock-store": "^1.2.1",
     "require-uncached": "~1.0.2",
