--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
 cache:
   directories:
     - node_modules
+  bundler: true
 
 env:
   - TASK=lint
@@ -15,7 +16,11 @@ env:
   - TASK=build:ac
   - TASK=securityscan SECURITYSCAN=srcclr
 
+before_install:
+  - rvm install 2.3.1
+
 install:
+  - bundle install --jobs=3 --retry=3
   - npm set progress=false && npm install
   - npm run build-setup:prod
 
