Add shared secret to watch environments and generate a jwt token in the example file from it

--- a/config/.watch.example
+++ b/config/.watch.example
@@ -2,3 +2,4 @@ WATCH_ZOPIM_ID=2EkTn0An31opxOLXuGgRCy5nPnSNmpe6
 WATCH_DOMAIN=dev.zd-dev.com
 WATCH_TALK_INTEGRATION=https://talkintegration-pod999.zendesk-staging.com
 WATCH_TALK_KEYWORD=hola
+WATCH_SHARED_SECRET=abc123
