Update development scripts for ac widget

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "watchConf": "node script/update_watch_config",
     "postwatchConf": "npm run watch",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
-    "watch:ac": "./script/start-ac-dev && npm run prewatch && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
+    "watchConf:ac": "node script/update_watch_config",
+    "postwatchConf:ac": "npm run watch:ac",
+    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
