--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
     {
       "name": "react",
       "version": "16.2.0",
-      "url": "https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/cjs/react.production.min.js"
+      "url": "https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.production.min.js"
     },
     {
       "name": "react-dom",
       "version": "16.2.0",
-      "url": "https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/cjs/react-dom.production.min.js"
+      "url": "https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"
     },
     {
       "name": "lodash",
