--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax#v2.0.0.rc2",
     "jasmine-spec-reporter": "^2.4.0",
     "jsdom": "~7.2.2",
+    "json-loader": "^0.5.7",
     "jsonwebtoken": "^5.7.0",
     "mockery": "~1.4.0",
     "node-cmd": "^3.0.0",
@@ -114,6 +115,7 @@
     "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-visualizer-plugin": "^0.1.5",
-    "when": "~3.4.4"
+    "when": "~3.4.4",
+    "yaml-loader": "^0.5.0"
   }
 }
