--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^2.6.1",
     "redux-on-state-change": "^1.0.0",
