--- a/manifest.json
+++ b/manifest.json
@@ -99,9 +99,8 @@
       "url": "https://cdnjs.cloudflare.com/ajax/libs/superagent/2.0.0/superagent.min.js"
     },
     "chat-web-sdk": {
-      "version": "1.1.4",
-      "url": "https://static-staging.zdassets.com/externals/chat-web-sdk/2.0.0/web-sdk.js",
-      "ignoreValidation": true
+      "version": "2.0.0",
+      "url": "https://static-staging.zdassets.com/externals/chat-web-sdk/2.0.0/web-sdk.js"
     },
     "socket.io-client": {
       "version": "2.0.4",
