--- a/manifest.json
+++ b/manifest.json
@@ -100,7 +100,7 @@
     },
     "chat-web-sdk": {
       "version": "2.0.0",
-      "url": "https://static-staging.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js"
+      "url": "https://static.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js"
     },
     "socket.io-client": {
       "version": "2.0.4",
