--- a/manifest.json
+++ b/manifest.json
@@ -100,7 +100,8 @@
     },
     "chat-web-sdk": {
       "version": "2.0.0",
-      "url": "https://static.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js"
+      "url": "https://static.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js",
+      "ignoreValidation": true
     },
     "socket.io-client": {
       "version": "2.0.4",
