--- a/manifest.json
+++ b/manifest.json
@@ -64,8 +64,8 @@
       "externals": [
         {
           "name": "chat-web-sdk",
-          "version": "1.1.4",
-          "url": "https://dev.zopim.com/web-sdk/1.1.4/web-sdk.js"
+          "version": "2.0.0",
+          "url": "https://static.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js"
         },
         {
           "name": "libphonenumber-js",
@@ -100,8 +100,7 @@
     },
     "chat-web-sdk": {
       "version": "2.0.0",
-      "url": "https://static.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js",
-      "ignoreValidation": true
+      "url": "https://static.zdassets.com/web_widget/externals/chat-web-sdk/2.0.0/web_sdk.js"
     },
     "socket.io-client": {
       "version": "2.0.4",
