--- a/config/.watch.example
+++ b/config/.watch.example
@@ -1,5 +1,5 @@
 WATCH_ZOPIM_ID=2EkTn0An31opxOLXuGgRCy5nPnSNmpe6
 WATCH_DOMAIN=dev.zd-dev.com
 WATCH_TALK_INTEGRATION=https://talkintegration-pod999.zendesk-staging.com
-WATCH_TALK_KEYWORD=hola
+WATCH_TALK_NICKNAME=hola
 WATCH_SHARED_SECRET=abc123
