--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
   "dependencies": {
     "airbrake-js": "^0.5.9",
     "airwaves": "~0.3.0",
-    "chat-web-sdk": "git+ssh://git@github.com/zendesk/chat-web-sdk.git#2.0.0",
-    "classnames": "^2.2.5",
+    "chat-web-sdk": "git+ssh://git@github.com/zendesk/chat-web-sdk.git#v3.0.0",
     "color": "~0.7.3",
     "core-js": "^2.5.1",
     "libphonenumber-js": "~0.4.49",
