--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "zd-svg-icons": "git+ssh://git@github.com/zendeskgarden/svg-icons.git#1.4.0"
   },
   "devDependencies": {
+    "@zendesk/garden-css-arrows": "^1.1.0",
+    "@zendesk/garden-css-tooltips": "^2.1.0",
+    "@zendesk/garden-css-variables": "^3.1.0",
     "app-root-path": "^2.0.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.20.0",
