--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build:ze_countries": "uglifyjs -c -m -o dist/ze_countries.js -- src/translation/ze_countries.js",
     "build:chat_sdk": "uglifyjs -c -m -o dist/web_sdk.js -- node_modules/chat-web-sdk/web_sdk.js",
     "prebuild:ac": "script/ac_fetch_i18n && cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:chat_sdk && npm run build:translationsIndividual",
-    "build:prod": "script/fetch_i18n && webpack --config=./webpack/webpack.prod.config.js --progress",
-    "build:ac": "webpack --config=./webpack/webpack.ac.config.js --progress",
+    "build:prod": "script/fetch_i18n && webpack --config=./webpack/webpack.prod.config.js",
+    "build:ac": "webpack --config=./webpack/webpack.ac.config.js",
     "watchConf": "node script/update_watch_config",
     "postwatchConf": "npm run watch",
     "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
