--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "jsonwebtoken": "^5.7.0",
     "mockery": "~1.4.0",
     "node-cmd": "^3.0.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "4.5.3",
     "postcss-loader": "^1.3.3",
     "raw-loader": "~0.5.1",
     "react-test-renderer": "^16.0.0",
