--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "raw-loader": "~0.5.1",
     "react-test-renderer": "^16.0.0",
     "react-transform-catch-errors": "^1.0.1",
+    "redux-catch": "^1.3.1",
     "redux-mock-store": "^1.2.1",
     "require-uncached": "~1.0.2",
     "rest": "~1.2.0",
