--- a/package.json
+++ b/package.json
@@ -71,15 +71,14 @@
   "devDependencies": {
     "app-root-path": "^2.0.1",
     "autoprefixer": "^6.7.7",
-    "babel-core": "^6.20.0",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "~6.2.9",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.16.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chalk": "^1.1.3",
     "concurrently": "^3.1.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.11",
     "cssstyle": "0.2.30",
     "dotenv": "^4.0.0",
     "es5-shim": "~3.4.0",
@@ -90,7 +89,7 @@
     "glob": "^6.0.1",
     "htmlmin": "0.0.4",
     "imports-loader": "~0.6.2",
-    "inline-source": "^4.2.2",
+    "inline-source": "^4.4.0",
     "jasmine": "^2.8.0",
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax#v2.0.0.rc2",
     "jasmine-spec-reporter": "^2.4.0",
@@ -100,7 +99,7 @@
     "mockery": "~1.4.0",
     "node-cmd": "^3.0.0",
     "node-sass": "4.5.3",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.1.4",
     "raw-loader": "~0.5.1",
     "react-test-renderer": "^16.0.0",
     "react-transform-catch-errors": "^1.0.1",
@@ -109,20 +108,20 @@
     "require-uncached": "~1.0.2",
     "rest": "~1.2.0",
     "run-sequence": "~0.3.6",
-    "sass-loader": "~3.1.2",
+    "sass-loader": "^7.0.1",
     "selenium-server": "~2.43.1",
     "semver": "^5.3.0",
-    "source-map-loader": "^0.2.1",
+    "source-map-loader": "^0.2.3",
     "svgo": "~0.5.3",
     "svgo-loader": "~1.1.0",
     "tiny-lr": "0.0.7",
     "uglify-js": "^2.6.1",
     "url-loader": "~0.5.7",
-    "webpack": "^2.4.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dashboard": "^0.2.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-visualizer-plugin": "^0.1.5",
+    "webpack": "^4.6.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.14",
+    "webpack-dashboard": "^1.1.1",
+    "webpack-dev-server": "^3.1.3",
     "when": "~3.4.4",
     "yaml-loader": "^0.5.0"
   }
