--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "app-root-path": "^2.0.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -82,7 +83,7 @@
     "cssstyle": "0.2.30",
     "dotenv": "^4.0.0",
     "es5-shim": "~3.4.0",
-    "eslint": "^1.10.3",
+    "eslint": "^4.19.1",
     "eslint-plugin-jasmine": "^2.8.4",
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^0.8.5",
