--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "svgo-loader": "~1.1.0",
     "tiny-lr": "0.0.7",
     "uglify-js": "^2.6.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "~0.5.7",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
