--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@zendesk/garden-css-arrows": "^1.1.0",
     "@zendesk/garden-css-tooltips": "^2.1.0",
     "@zendesk/garden-css-variables": "^3.1.0",
+    "@zendeskgarden/svg-icons": "~4.0.0",
     "airbrake-js": "^0.5.9",
     "airwaves": "~0.3.0",
     "chat-web-sdk": "git+ssh://git@github.com/zendesk/chat-web-sdk.git#v7.0.0",
