--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "sprintf-js": "^1.1.1",
     "superagent": "^2.0.0",
     "zd-css-buttons": "git+ssh://git@github.com/zendeskgarden/css-buttons.git#2.2.0",
-    "zd-css-variables": "git+ssh://git@github.com/zendeskgarden/css-variables.git#0.11.0",
-    "zd-svg-icons": "git+ssh://git@github.com/zendeskgarden/svg-icons-archive.git#1.4.0"
+    "zd-css-variables": "git+ssh://git@github.com/zendeskgarden/css-variables.git#0.11.0"
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
