--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "core-js": "^2.5.1",
     "libphonenumber-js": "~0.4.49",
     "lodash": "~4.0.0",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
