--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "core-js": "^2.5.1",
     "libphonenumber-js": "~0.4.49",
     "lodash": "~4.0.0",
-    "moment": "^2.22.1",
+    "luxon": "^1.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
