--- a/config/.watch.example
+++ b/config/.watch.example
@@ -3,3 +3,4 @@ WATCH_DOMAIN=dev.zd-dev.com
 WATCH_TALK_INTEGRATION=https://talkintegration-pod999.zendesk-staging.com
 WATCH_TALK_NICKNAME=hola
 WATCH_SHARED_SECRET=abc123
+WATCH_CHAT_SHARED_SECRET=123abc
