--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "test:debug": "node debug script/jasmine-runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "validate-manifest": "node script/validate_manifest.js"
+    "validate-manifest": "node script/validate_manifest.js",
+    "predev": "npm run build-examples",
+    "dev": "webpack-dev-server --config ./webpack/webpack.dev.js --mode development --inline --hot"
   },
   "author": "Zendesk",
   "license": "All Rights Reserved",
@@ -72,9 +74,7 @@
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -88,10 +88,10 @@
     "eslint": "^4.19.1",
     "eslint-plugin-jasmine": "^2.8.4",
     "eslint-plugin-react": "^3.16.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^1.1.11",
     "glob": "^6.0.1",
     "htmlmin": "0.0.4",
-    "imports-loader": "~0.6.2",
+    "imports-loader": "^0.8.0",
     "inline-source": "^4.4.0",
     "jasmine": "^2.8.0",
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax#v2.0.0.rc2",
@@ -102,8 +102,9 @@
     "mockery": "~1.4.0",
     "node-cmd": "^3.0.0",
     "node-sass": "4.5.3",
-    "postcss-loader": "^2.1.4",
-    "raw-loader": "~0.5.1",
+    "postcss-loader": "^2.1.5",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^4.1.2",
     "react-test-renderer": "^16.0.0",
     "react-transform-catch-errors": "^1.0.1",
     "redux-catch": "^1.3.1",
@@ -115,17 +116,15 @@
     "selenium-server": "~2.43.1",
     "semver": "^5.3.0",
     "source-map-loader": "^0.2.3",
-    "svgo": "~0.5.3",
-    "svgo-loader": "~1.1.0",
+    "svgo": "^1.0.5",
+    "svgo-loader": "^2.1.0",
     "tiny-lr": "0.0.7",
     "uglify-js": "^2.6.1",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "~0.5.7",
-    "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.14",
-    "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^3.1.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2",
     "when": "~3.4.4",
     "yaml-loader": "^0.5.0"
   }
