--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "build:ze_countries": "uglifyjs -c -m -o dist/ze_countries.js -- src/translation/ze_countries.js",
     "build:chat_sdk": "uglifyjs -c -m -o dist/web_sdk.js -- node_modules/chat-web-sdk/web_sdk.js",
     "prebuild:ac": "script/ac_fetch_i18n && cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:chat_sdk && npm run build:translationsIndividual",
-    "build:prod": "script/fetch_i18n && webpack --config=./webpack/webpack.prod.config.js",
-    "build:ac": "webpack --config=./webpack/webpack.ac.config.js",
+    "build:prod": "script/fetch_i18n && webpack --config ./webpack/webpack.prod.js",
+    "build:ac": "webpack --config ./webpack/webpack.ac.config.js",
     "watchConf": "node script/update_watch_config",
     "postwatchConf": "npm run watch",
-    "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
+    "watch": "webpack-dev-server --config ./webpack/webpack.dev.js --inline --hot",
     "watchConf:ac": "node script/update_watch_config",
     "postwatchConf:ac": "npm run watch:ac",
-    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
+    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
@@ -33,9 +33,7 @@
     "test:debug": "node debug script/jasmine-runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "validate-manifest": "node script/validate_manifest.js",
-    "predev": "npm run build-examples",
-    "dev": "webpack-dev-server --config ./webpack/webpack.dev.js --mode development --inline --hot"
+    "validate-manifest": "node script/validate_manifest.js"
   },
   "author": "Zendesk",
   "license": "All Rights Reserved",
@@ -75,6 +73,7 @@
   "devDependencies": {
     "app-root-path": "^2.0.1",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -102,7 +101,9 @@
     "mockery": "~1.4.0",
     "node-cmd": "^3.0.0",
     "node-sass": "4.5.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-loader": "^2.1.5",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^4.1.2",
     "react-test-renderer": "^16.0.0",
@@ -119,9 +120,11 @@
     "svgo": "^1.0.5",
     "svgo-loader": "^2.1.0",
     "tiny-lr": "0.0.7",
-    "uglify-js": "^2.6.1",
+    "uglify-js": "^3.3.24",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
