Rename weback.ac configs

--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "build:chat_sdk": "uglifyjs -c -m -o dist/web_sdk.js -- node_modules/chat-web-sdk/web_sdk.js",
     "prebuild:ac": "script/ac_fetch_i18n && cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:chat_sdk && npm run build:translationsIndividual",
     "build:prod": "script/fetch_i18n && webpack --config ./webpack/webpack.prod.js",
-    "build:ac": "webpack --config ./webpack/webpack.ac.config.js",
+    "build:ac": "webpack --config ./webpack/webpack.ac.prod.js",
     "watchConf": "node script/update_watch_config",
     "postwatchConf": "npm run watch",
     "watch": "webpack-dev-server --config ./webpack/webpack.dev.js",
     "watchConf:ac": "node script/update_watch_config",
     "postwatchConf:ac": "npm run watch:ac",
-    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.config.js",
+    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
