--- a/config/.watch.example
+++ b/config/.watch.example
@@ -4,3 +4,4 @@ WATCH_TALK_INTEGRATION=https://talkintegration-pod999.zendesk-staging.com
 WATCH_TALK_NICKNAME=hola
 WATCH_SHARED_SECRET=abc123
 WATCH_CHAT_SHARED_SECRET=123abc
+WATCH_ARTICLE_ID=123
