Revert "[CE-4108] Fix webpack configs"

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "build:ze_countries": "uglifyjs -c -m -o dist/ze_countries.js -- src/translation/ze_countries.js",
     "build:chat_sdk": "uglifyjs -c -m -o dist/web_sdk.js -- node_modules/chat-web-sdk/web_sdk.js",
     "prebuild:ac": "script/ac_fetch_i18n && cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:chat_sdk && npm run build:translationsIndividual",
-    "build:prod": "script/fetch_i18n && webpack --config ./webpack/webpack.prod.js",
-    "build:ac": "webpack --config ./webpack/webpack.ac.prod.js",
+    "build:prod": "script/fetch_i18n && webpack --config=./webpack/webpack.prod.config.js",
+    "build:ac": "webpack --config=./webpack/webpack.ac.config.js",
     "watchConf": "node script/update_watch_config",
     "postwatchConf": "npm run watch",
-    "watch": "webpack-dev-server --config ./webpack/webpack.dev.js",
+    "watch": "webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.dev.config.js",
     "watchConf:ac": "node script/update_watch_config",
     "postwatchConf:ac": "npm run watch:ac",
-    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.js",
+    "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dashboard -- webpack-dev-server --config=./webpack/webpack.ac.dev.config.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node script/jasmine-runner.js",
@@ -72,8 +72,9 @@
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.0.0",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -87,10 +88,10 @@
     "eslint": "^4.19.1",
     "eslint-plugin-jasmine": "^2.8.4",
     "eslint-plugin-react": "^3.16.1",
-    "file-loader": "^1.1.11",
+    "file-loader": "^0.8.5",
     "glob": "^6.0.1",
     "htmlmin": "0.0.4",
-    "imports-loader": "^0.8.0",
+    "imports-loader": "~0.6.2",
     "inline-source": "^4.4.0",
     "jasmine": "^2.8.0",
     "jasmine-ajax": "git://github.com/pivotal/jasmine-ajax#v2.0.0.rc2",
@@ -101,10 +102,8 @@
     "mockery": "~1.4.0",
     "node-cmd": "^3.0.0",
     "node-sass": "4.5.3",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "postcss-loader": "^2.1.5",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "raw-loader": "^0.5.1",
+    "postcss-loader": "^2.1.4",
+    "raw-loader": "~0.5.1",
     "react-test-renderer": "^16.0.0",
     "react-transform-catch-errors": "^1.0.1",
     "redux-catch": "^1.3.1",
@@ -116,17 +115,17 @@
     "selenium-server": "~2.43.1",
     "semver": "^5.3.0",
     "source-map-loader": "^0.2.3",
-    "svgo": "^1.0.5",
-    "svgo-loader": "^2.1.0",
+    "svgo": "~0.5.3",
+    "svgo-loader": "~1.1.0",
     "tiny-lr": "0.0.7",
-    "uglify-js": "^2.8.29",
+    "uglify-js": "^2.6.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.8.3",
+    "url-loader": "~0.5.7",
+    "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2",
+    "webpack-cli": "^2.0.14",
+    "webpack-dashboard": "^1.1.1",
+    "webpack-dev-server": "^3.1.3",
     "when": "~3.4.4",
     "yaml-loader": "^0.5.0"
   }
