Use watchConf var for google analytics id

--- a/config/.watch.example
+++ b/config/.watch.example
@@ -5,3 +5,4 @@ WATCH_TALK_NICKNAME=hola
 WATCH_SHARED_SECRET=abc123
 WATCH_CHAT_SHARED_SECRET=123abc
 WATCH_ARTICLE_ID=123
+WATCH_GA_ID=UA-103023081-1
