--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@zendeskgarden/css-buttons": "6.0.0",
     "@zendeskgarden/css-tooltips": "^4.0.1",
     "@zendeskgarden/css-variables": "^4.1.3",
+    "@zendeskgarden/react-textfields": "^3.2.1",
     "@zendeskgarden/react-theming": "^2.1.1",
     "@zendeskgarden/svg-icons": "~4.0.0",
     "airwaves": "~0.3.0",
