--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@zendeskgarden/css-arrows": "^3.1.0",
     "@zendeskgarden/css-tooltips": "^4.0.1",
     "@zendeskgarden/css-variables": "^4.1.3",
+    "@zendeskgarden/react-textfields": "^3.2.4",
+    "@zendeskgarden/react-theming": "^3.0.0",
     "@zendeskgarden/svg-icons": "~4.0.0",
     "@zendeskgarden/css-buttons": "6.0.0",
     "airwaves": "~0.3.0",
