--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
   "license": "All Rights Reserved",
   "dependencies": {
     "@zendeskgarden/css-arrows": "^3.1.0",
+    "@zendeskgarden/css-bedrock": "^7.0.1",
+    "@zendeskgarden/css-buttons": "6.0.0",
     "@zendeskgarden/css-tooltips": "^4.0.1",
     "@zendeskgarden/css-variables": "^4.1.3",
     "@zendeskgarden/react-textfields": "^3.2.4",
     "@zendeskgarden/react-theming": "^3.0.0",
     "@zendeskgarden/svg-icons": "~4.0.0",
-    "@zendeskgarden/css-buttons": "6.0.0",
     "airwaves": "~0.3.0",
     "chat-web-sdk": "git+ssh://git@github.com/zendesk/chat-web-sdk.git#v13.0.0",
     "classnames": "^2.2.5",
