Dynamically import talk vendors

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.js",
     "build": "npm run build-setup:prod && npm run build:prod",
     "build-ac": "npm run build-setup:prod && npm run build:ac && npm run build:ac_new",
-    "test": "node script/jasmine-runner.js",
-    "test:ci": "NODE_ENV=test node script/jasmine-runner.js",
-    "test:debug": "node debug script/jasmine-runner.js",
+    "test": "node test/runner.js",
+    "test:ci": "NODE_ENV=test node test/runner.js",
+    "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
     "validate-manifest": "node script/validate_manifest.js",
@@ -71,7 +71,7 @@
     "core-js": "^2.5.1",
     "libphonenumber-js": "~0.4.49",
     "lodash": "~4.0.0",
-    "luxon": "^1.2.0",
+    "luxon": "1.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -94,6 +94,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
