--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "sha1": "^1.1.1",
     "socket.io-client": "^2.0.4",
     "sprintf-js": "^1.1.1",
+    "styled-components": "^3.3.3",
     "superagent": "^2.0.0"
   },
   "devDependencies": {
