--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@zendeskgarden/css-buttons": "6.0.0",
     "@zendeskgarden/css-tooltips": "^4.0.1",
     "@zendeskgarden/css-variables": "^4.1.3",
+    "@zendeskgarden/react-select": "^2.2.6",
     "@zendeskgarden/react-textfields": "^3.2.4",
     "@zendeskgarden/react-theming": "^3.0.0",
     "@zendeskgarden/svg-icons": "~4.0.0",
