Remove all old AC config

--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "build:translationsIndividual": "rm -rf dist/locales && cp -r src/translation/locales dist/locales",
     "build:ze_localeIdMap": "uglifyjs -c -m -o dist/ze_localeIdMap.js -- src/translation/ze_localeIdMap.js",
     "build:ze_countries": "uglifyjs -c -m -o dist/ze_countries.js -- src/translation/ze_countries.js",
-    "build:chat_sdk": "uglifyjs -c -m -o dist/web_sdk.js -- node_modules/chat-web-sdk/web_sdk.js",
-    "prebuild:ac": "script/ac_fetch_i18n && cp manifest.json dist && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:chat_sdk && npm run build:translationsIndividual",
+    "prebuild:ac": "script/ac_fetch_i18n && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:translationsIndividual",
     "build:prod": "script/fetch_i18n && webpack --config ./webpack/webpack.prod.js",
     "build:ac": "webpack --config ./webpack/webpack.ac.prod.js",
-    "build:ac_new": "webpack --config ./webpack/webpack.ac.prod_new.js",
-    "build:ac-validate": "npm run build:ac && npm run build:ac_new && npm run size",
+    "build:ac-validate": "npm run build:ac && npm run size",
     "watchConf": "node script/update_watch_config",
     "postwatchConf": "npm run watch",
     "watch": "webpack-dev-server --config ./webpack/webpack.dev.js",
@@ -29,13 +27,12 @@
     "postwatchConf:ac": "npm run watch:ac",
     "watch:ac": "node script/start_ac_dev.js -- $npm_package_config_watchConfigPath && npm run prewatch && webpack-dev-server --config ./webpack/webpack.ac.dev.js",
     "build": "npm run build-setup:prod && npm run build:prod",
-    "build-ac": "npm run build-setup:prod && npm run build:ac && npm run build:ac_new",
+    "build-ac": "npm run build-setup:prod && npm run build:ac",
     "test": "node test/runner.js",
     "test:ci": "NODE_ENV=test node test/runner.js",
     "test:debug": "node debug test/runner.js",
     "lint": "eslint src test --ignore-pattern=src/translation/*.js",
     "lint-fix": "eslint --fix src test --ignore-pattern=src/translation/*.js",
-    "validate-manifest": "node script/validate_manifest.js",
     "size": "bundlesize"
   },
   "bundlesize": [
