Build translation files as modules

--- a/package.json
+++ b/package.json
@@ -11,13 +11,8 @@
     "prebuild-examples": "uglifyjs --compress --mangle -- ./src/bootstrap.js > ./dist/bootstrap.js",
     "build-examples": "node script/build-examples.js -- $npm_package_config_watchConfigPath",
     "prewatch": "npm run build:version:generate && npm run build-examples",
-    "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map",
-    "build:ze_translations": "uglifyjs -c -m -o dist/ze_translations.js -- src/translation/ze_translations.js",
-    "build:translationsIndividual": "rm -rf dist/locales && cp -r src/translation/locales dist/locales",
-    "build:ze_localeIdMap": "uglifyjs -c -m -o dist/ze_localeIdMap.js -- src/translation/ze_localeIdMap.js",
-    "build:ze_countries": "uglifyjs -c -m -o dist/ze_countries.js -- src/translation/ze_countries.js",
-    "prebuild:ac": "script/ac_fetch_i18n && npm run build:ze_translations && npm run build:ze_localeIdMap && npm run build:ze_countries && npm run build:translationsIndividual",
-    "build:prod": "script/fetch_i18n && webpack --config ./webpack/webpack.prod.js",
+    "build-setup:prod": "npm run build:version:generate && npm run prebuild-examples && rm -rf ./dist/*.map && script/fetch_i18n",
+    "build:prod": "webpack --config ./webpack/webpack.prod.js",
     "build:ac": "webpack --config ./webpack/webpack.ac.prod.js",
     "build:ac-validate": "npm run build:ac && npm run size",
     "watchConf": "node script/update_watch_config",
